[fix] collapse of share button layout

--- a/docs/src/css/style.css
+++ b/docs/src/css/style.css
@@ -54,3 +54,16 @@ td {
 .right {
     float: right !important;
 }
+
+.share-buttons>* {
+    line-height: 20px;
+}
+
+.share-buttons>*>* {
+    vertical-align: bottom;
+}
+
+.share-buttons {
+    text-align: right;
+    padding: 5px;
+}
